# Owl-CLI

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/commands/: owl-search.md
owl_cli/: banner.py  cache.py  cli.py  config.py  diff.py  history.py  indexer.py  mcp_server.py  model.py
owl_cli/extractors/: __init__.py  go_extractor.py  java_extractor.py  javascript_extractor.py  php_extractor.py  python_extractor.py  ruby_extractor.py  rust_extractor.py  typescript_extractor.py
